[City:Talk] Fix a crash when unable to connect to the server

--- a/bot.toml.template
+++ b/bot.toml.template
@@ -3,8 +3,8 @@ bot_api = "TELEGRAM BOT TOKEN HERE"
 admins = [
     "ADMINS HERE"
 ]
-main_group_id = "MAIN GROUP ID HERE
-username = "@example_bot"
+main_group_id = "MAIN GROUP ID HERE"
+username = "example_bot"
 [server]
 address = "SERVER ADDRESS HERE"
 port = "25565"
